<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/quiz_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer1"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"/>


        <TextView
            android:id="@+id/question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question2_answer"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question2"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer2"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"/>
        <TextView
            android:id="@+id/question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question3"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer3"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:id="@+id/question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question4_answer"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question4"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/answer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer4"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:id="@+id/question5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question5"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/answer5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer5"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:id="@+id/question6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question5_answer"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question6"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/answer6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer6"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:id="@+id/question7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question7"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/answer7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer7"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"/>



        <TextView
            android:id="@+id/question8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question8_answer"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question8"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/answer8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer8"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:id="@+id/question9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question9"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/answer9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer9"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"/>


        <TextView
            android:id="@+id/question10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question10_answer"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question10"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/answer10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer10"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:id="@+id/credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit"
            android:textColor="@color/primaryText"
            android:textSize="24sp"
            android:layout_marginTop="24dp"
            android:gravity="left"/>


    </LinearLayout>
</ScrollView>